objects/nRE__Referral__c.object
<CustomObject>
    <description>nCino Referral Management System</description>
    <fields>
        <fullName>Product_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred Product Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>LLC_BI__Product_Type__c.LLC_BI__Usage_Type__c</field>
                <operation>notContain</operation>
                <value>Global</value>
            </filterItems>
            <filterItems>
                <field>LLC_BI__Product_Type__c.LLC_BI__Product_Count__c</field>
                <operation>greaterThan</operation>
                <value>0</value>
            </filterItems>
            <filterItems>
                <field>$Source.nRE__Referred_To_Product_Line__c</field>
                <operation>equals</operation>
                <valueField>LLC_BI__Product_Type__c.LLC_BI__Product_Line__r.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>LLC_BI__Product_Type__c</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referred_To_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Product_Type__c</field>
                <operation>equals</operation>
                <valueField>LLC_BI__Product__c.LLC_BI__Product_Type__r.Id</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.nRE__Referred_To_Product_Line__c</field>
                <operation>equals</operation>
                <valueField>LLC_BI__Product__c.LLC_BI__Product_Type__r.LLC_BI__Product_Line__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>LLC_BI__Product__c</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nRE_Product_Line__c</fullName>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Card</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>SBA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nRE_Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>nRE_Product_Line__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>504</fullName>
                </value>
                <value>
                    <fullName>7(a)</fullName>
                </value>
                <value>
                    <fullName>Business Card</fullName>
                </value>
                <value>
                    <fullName>Consumer - Non-Real Estate</fullName>
                </value>
                <value>
                    <fullName>Consumer - Real Estate</fullName>
                </value>
                <value>
                    <fullName>Consumer - Unsecured</fullName>
                </value>
                <value>
                    <fullName>Mortgage System</fullName>
                </value>
                <value>
                    <fullName>Non-Real Estate</fullName>
                </value>
                <value>
                    <fullName>Personal Card</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Unsecured</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nRE_Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>nRE_Product_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Purchase</fullName>
                </value>
                <value>
                    <fullName>Refinance</fullName>
                </value>
                <value>
                    <fullName>Land Development</fullName>
                </value>
                <value>
                    <fullName>Unimproved - Purchase</fullName>
                </value>
                <value>
                    <fullName>Unimproved - Refinance</fullName>
                </value>
                <value>
                    <fullName>RLOC</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Boat/Motor/Trailer</fullName>
                </value>
                <value>
                    <fullName>Equipment</fullName>
                </value>
                <value>
                    <fullName>Crops</fullName>
                </value>
                <value>
                    <fullName>Accounts Receivables</fullName>
                </value>
                <value>
                    <fullName>Inventory</fullName>
                </value>
                <value>
                    <fullName>Savings Secured</fullName>
                </value>
                <value>
                    <fullName>Line of Credit</fullName>
                </value>
                <value>
                    <fullName>Working Capital - Term Loan</fullName>
                </value>
                <value>
                    <fullName>Purchase Primary/Vacation Residence</fullName>
                </value>
                <value>
                    <fullName>Refinance Primary/Vacation Residence</fullName>
                </value>
                <value>
                    <fullName>Purchase Investment Property</fullName>
                </value>
                <value>
                    <fullName>Refinance Investment Property</fullName>
                </value>
                <value>
                    <fullName>Home Improvements</fullName>
                </value>
                <value>
                    <fullName>Purchase Lot</fullName>
                </value>
                <value>
                    <fullName>Refinance Lot</fullName>
                </value>
                <value>
                    <fullName>Vehicle Loan</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Unsecured - Term Loan</fullName>
                </value>
                <value>
                    <fullName>HELOC</fullName>
                </value>
                <value>
                    <fullName>Advantage+</fullName>
                </value>
                <value>
                    <fullName>Rewards Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nRE__Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>LLC_BI__Branch__c</referenceTo>
        <relationshipLabel>Branches</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nRE__Closed_Lost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed Lost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nRE__Closed_Won__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed Won</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nRE__Company__c</fullName>
        <label>Company</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nRE__Email_Address__c</fullName>
        <label>Email Address</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nRE__Existing_Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Existing Relationship</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nRE__First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nRE__Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>nRE__Last_Name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nRE__Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>nRE__Phone_Number__c</fullName>
        <formula>nRE__Existing_Relationship__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a formula field that pulls in the Phone Number from the Existing Relationship page layout</inlineHelpText>
        <label>Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nRE__Preferred_Contact_Method__c</fullName>
        <label>Preferred Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Work Phone</fullName>
                </value>
                <value>
                    <fullName>Mobile Phone</fullName>
                </value>
                <value>
                    <fullName>Home Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nRE__Preferred_Contact_Time__c</fullName>
        <label>Preferred Contact Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Morning</fullName>
                </value>
                <value>
                    <fullName>Afternoon</fullName>
                </value>
                <value>
                    <fullName>Evening</fullName>
                </value>
                <value>
                    <fullName>Anytime</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nRE__Receiving_Line_of_Business__c</fullName>
        <label>Receiving Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Mortgage</fullName>
                </value>
                <value>
                    <fullName>Retail Banking</fullName>
                </value>
                <value>
                    <fullName>Trust / Wealth Management</fullName>
                </value>
                <value>
                    <fullName>Treasury Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nRE__Referral_Amount__c</fullName>
        <label>Referral Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nRE__Referral_Close_Date__c</fullName>
        <label>Referral Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nRE__Referral_Details__c</fullName>
        <label>Referral Details</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>nRE__Referral_Quality_Notes__c</fullName>
        <label>Referral Quality Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>nRE__Referral_Quality__c</fullName>
        <label>Referral Quality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Qualified</fullName>
                </value>
                <value>
                    <fullName>Unqualified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nRE__Referral_Received_Date__c</fullName>
        <label>Referral Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nRE__Referral_Sent_Date__c</fullName>
        <label>Referral Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nRE__Referral_Source_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referral Source Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.LLC_BI__Type__c</field>
                <operation>equals</operation>
                <value>Referral Source</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Referral Source Contacts</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nRE__Referral_Source__c</fullName>
        <label>Referral Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Association</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Current Customer</fullName>
                </value>
                <value>
                    <fullName>Direct Call</fullName>
                </value>
                <value>
                    <fullName>Email Campaign</fullName>
                </value>
                <value>
                    <fullName>Employee Referral</fullName>
                </value>
                <value>
                    <fullName>Industry Professional</fullName>
                </value>
                <value>
                    <fullName>Magazine</fullName>
                </value>
                <value>
                    <fullName>Prior Origination</fullName>
                </value>
                <value>
                    <fullName>Trade Show</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nRE__Referral_Status__c</fullName>
        <label>Referral Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nRE__Referred_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nRE__Referred_To_Product_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred To Product Line</label>
        <referenceTo>LLC_BI__Product_Line__c</referenceTo>
        <relationshipLabel>Product Lines Referred</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nRE__Referred_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Referrals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nRE__Referring_Line_of_Business__c</fullName>
        <label>Referring Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Mortgage</fullName>
                </value>
                <value>
                    <fullName>Retail Banking</fullName>
                </value>
                <value>
                    <fullName>Trust / Wealth Management</fullName>
                </value>
                <value>
                    <fullName>Treasury Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nRE__Work_Phone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>nRE__isReceived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isReceived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nRE__isSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSent</label>
        <type>Checkbox</type>
    </fields>
    <label>Referral</label>
    <listViews>
        <fullName>nRE__All</fullName>
        <columns>NAME</columns>
        <columns>nRE__Existing_Relationship__c</columns>
        <columns>nRE_Product_Line__c</columns>
        <columns>nRE_Product_Type__c</columns>
        <columns>nRE_Product__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Ref-{0000000}</displayFormat>
        <label>Referral Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referrals</pluralLabel>
    <recordTypes>
        <fullName>nRE__Referral_Existing_Relationship</fullName>
        <active>true</active>
        <description>This Record Type is used for Referrals of EXISTING Relationships</description>
        <label>Referral - Existing Relationship</label>
    </recordTypes>
    <recordTypes>
        <fullName>nRE__Referral_Existing_Relationship_Accepted</fullName>
        <active>true</active>
        <description>This Record Type will not show the &apos;Send Referral&apos; or &apos; Accept Referral&apos; buttons</description>
        <label>Referral - Existing Relationship Accepted</label>
    </recordTypes>
    <recordTypes>
        <fullName>nRE__Referral_Existing_Relationship_Sent</fullName>
        <active>true</active>
        <description>This Record Type will show the &apos;Accept Referral&apos; button</description>
        <label>Referral - Existing Relationship Sent</label>
    </recordTypes>
    <recordTypes>
        <fullName>nRE__Referral_New_Relationship</fullName>
        <active>true</active>
        <description>This Record Type is used for Referrals of NEW Relationships</description>
        <label>Referral - New Relationship</label>
    </recordTypes>
    <recordTypes>
        <fullName>nRE__Referral_New_Relationship_Accepted</fullName>
        <active>true</active>
        <description>This Record Type will not show the &apos;Send Referral&apos; or &apos; Accept Referral&apos; buttons</description>
        <label>Referral - New Relationship Accepted</label>
    </recordTypes>
    <recordTypes>
        <fullName>nRE__Referral_New_Relationship_Sent</fullName>
        <active>true</active>
        <description>This Record Type will show the &apos;Accept Referral&apos; button</description>
        <label>Referral - New Relationship Sent</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>nRE__Lock_Closed_Referrals</fullName>
        <active>true</active>
        <description>You cannot edit a referral once it has been Closed Won or Closed Lost</description>
        <errorConditionFormula>OR(
ISPICKVAL(nRE__Referral_Status__c , &apos;Closed Won&apos;),
ISPICKVAL(nRE__Referral_Status__c , &apos;Closed Lost&apos;))</errorConditionFormula>
        <errorMessage>You cannot edit a referral once it has been Closed Won or Closed Lost</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>nRE__Referral_Must_Be_Won_or_Lost</fullName>
        <active>true</active>
        <description>A Referral must be Closed Won or Closed Lost. Both Checkboxes cannot = True. Please check only one appropriate outcome.</description>
        <errorConditionFormula>AND(
nRE__Closed_Won__c = True,
nRE__Closed_Lost__c = True)</errorConditionFormula>
        <errorMessage>A Referral must be Closed Won or Closed Lost. Both Checkboxes cannot = True. Please check only one appropriate outcome.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>nRE__Referral_Quality_is_Required</fullName>
        <active>true</active>
        <description>A Referral must be marked as Qualified or Unqualified before it can be Closed.</description>
        <errorConditionFormula>AND(
OR(
nRE__Closed_Won__c = True,
nRE__Closed_Lost__c = True),
ISPICKVAL(nRE__Referral_Quality__c , &apos;&apos;))</errorConditionFormula>
        <errorDisplayField>nRE__Referral_Quality__c</errorDisplayField>
        <errorMessage>A Referral must be marked as Qualified or Unqualified before it can be Closed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>nRE__Referral_Status_Cannot_Be_Blank</fullName>
        <active>true</active>
        <description>The referral status cannot be blank.  &apos;New&apos; should be the default value.</description>
        <errorConditionFormula>IF(ISBLANK(TEXT(nRE__Referral_Status__c)), True, False)</errorConditionFormula>
        <errorDisplayField>nRE__Referral_Status__c</errorDisplayField>
        <errorMessage>The referral status cannot be blank.</errorMessage>
    </validationRules>
</CustomObject>